--- a/flux/base/kustomization.yaml
+++ b/flux/base/kustomization.yaml
@@ -1,4 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - instavote/
+  - instavote-deploy-gitrepo.yaml
+  - instavote-deploy-kustomization.yaml
