--- a/flux/base/instavote-kustomization.yaml
+++ b/flux/base/instavote-kustomization.yaml
@@ -3,18 +3,14 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: vote
-  namespace: flux-system
+  namespace: instavote
 spec:
-  healthChecks:
-  - kind: Deployment
-    name: vote
-    namespace: instavote
   interval: 1m0s
-  path: ./
-  prune: true
+  path: ./flux
+  prune: false
+  serviceAccountName: instavote
+  targetNamespace: instavote
   sourceRef:
     kind: GitRepository
-    name: instavote
-  targetNamespace: instavote
-  timeout: 3m0s
-  validation: client
+    name: vote
+
