--- a/flux/base/instavote-kustomization.yaml
+++ b/flux/base/instavote-kustomization.yaml
@@ -1,16 +1,20 @@
 ---
-apiVersion: kustomize.toolkit.fluxcd.io/v1
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
   name: vote
   namespace: instavote
 spec:
+  healthChecks:
+  - kind: Deployment
+    name: vote
+    namespace: instavote
   interval: 1m0s
-  path: ./flux
-  prune: false
-  serviceAccountName: instavote
-  targetNamespace: instavote
+  path: ./
+  prune: true
   sourceRef:
     kind: GitRepository
-    name: vote
-
+    name: instavote
+  targetNamespace: instavote
+  timeout: 3m0s
+  validation: client
