--- a/flux/staging/instavote-kustomization.yaml
+++ b/flux/staging/instavote-kustomization.yaml
@@ -3,6 +3,6 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
   name: vote
-  namespace: flux-system
+  namespace: instavote
 spec:
   path: ./kustomize/instavote/staging
