--- a/flux/base/instavote-gitrepository.yaml
+++ b/flux/base/instavote-gitrepository.yaml
@@ -3,7 +3,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
   name: vote
-  namespace: flux-system
+  namespace: instavote
 spec:
   interval: 1m0s
   ref:
