--- a/flux/base/instavote-kustomization.yaml
+++ b/flux/base/instavote-kustomization.yaml
@@ -10,7 +10,7 @@ spec:
     name: vote
     namespace: instavote
   interval: 1m0s
-  path: ./
+  path: ./kustomize/instavote/staging
   prune: true
   sourceRef:
     kind: GitRepository
