--- a/flux/base/kustomization.yaml
+++ b/flux/base/kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - instavote-gitrepository.yaml
-  - instavote-kustomization.yaml
+  - vote-gitrepository.yaml
+  - vote-kustomization.yaml
