--- a/flux/staging/vote-kustomization.yaml
+++ b/flux/staging/vote-kustomization.yaml
@@ -1,8 +1,20 @@
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: vote
   namespace: instavote
 spec:
-  path: ./kustomize/instavote/staging
+  interval: 1m0s
+  path: ./kustomize/vote/staging
+  prune: true
+  targetNamespace: instavote
+  serviceAccountName: instavote
+  sourceRef:
+    kind: GitRepository
+    name: vote
+    namespace: instavote
+  healthChecks:
+    - kind: Deployment
+      name: vote
+      namespace: instavote
+  timeout: 3m0s
