--- a/kustomize/vote/staging/kustomization.yaml
+++ b/kustomize/vote/staging/kustomization.yaml
@@ -2,3 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../base
+
+images:
+  - name: cfathi/vote
+    newTag: main-9ab5f410-1752159109 # {"$imagepolicy":"instavote:vote:tag"}
