--- a/kustomize/vote/base/service.yaml
+++ b/kustomize/vote/base/service.yaml
@@ -2,18 +2,16 @@ apiVersion: v1
 kind: Service
 metadata:
   namespace: instavote
-  creationTimestamp: null
   labels:
     app: vote
     tier: front
   name: vote
 spec:
+  type: ClusterIP  # ← changed from NodePort
   ports:
-  - name: "80"
-    nodePort: 30001
-    port: 80
-    protocol: TCP
-    targetPort: 80
+    - name: http
+      port: 80
+      targetPort: 80
+      protocol: TCP
   selector:
     app: vote
-  type: NodePort
