--- a/kustomize/vote/base/ingress.yaml
+++ b/kustomize/vote/base/ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: instavote
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   ingressClassName: nginx
   rules:
