--- a/kustomize/vote/base/canary.yaml
+++ b/kustomize/vote/base/canary.yaml
@@ -14,7 +14,7 @@ spec:
   ingressRef:
     apiVersion: networking.k8s.io/v1
     kind: Ingress
-    name: vote-ingress
+    name: vote
   # HPA reference (optional)
   autoscalerRef:
     apiVersion: autoscaling/v2beta2
