--- a/kustomize/vote/base/ingress.yaml
+++ b/kustomize/vote/base/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: vote-ingress
+  name: vote
   namespace: instavote
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
