--- a/kustomize/vote/staging/canary.yaml
+++ b/kustomize/vote/staging/canary.yaml
@@ -5,6 +5,12 @@ metadata:
   namespace: instavote
 spec:
   analysis:
-    interval: 30s
-    threshold: 3
-    iterations: 5
+  ## This is for Progressive 
+  interval: 10s
+  threshold: 10
+  maxWeight: 50
+  stepWeight: 5
+  ## This is for BLUE/GREEN
+    # interval: 30s
+    # threshold: 3
+    # iterations: 5
